# solana-betting

./: .gitignore  Anchor.toml  Cargo.toml  README.md  abc.ts  deploy-devnet.sh  deploy-testnet.sh  package.json
.anchor/test-ledger/: genesis.tar.bz2  test-ledger-log.txt
deployment-recovery/: seed_20250315_173600.txt
programs/betting-program/: Cargo.toml
programs/betting-program/src/: constants.rs  error.rs  lib.rs  state.rs
programs/betting-program/src/instructions/: add_voucher_funds.rs  claim_winnings.rs  close_user_bet.rs  create_event.rs  increase_deadline.rs  initialize.rs  initialize_bet_vault.rs  initialize_event_pool.rs  initialize_fee_pool.rs  initialize_user_bet.rs  mod.rs  place_bet.rs  place_bet_with_voucher.rs  resolve_event.rs  revoke_event.rs  update_config.rs  update_fee_percentage.rs  update_owner.rs  update_signer.rs  update_voucher_amount.rs  withdraw_fees.rs
programs/betting-program/src/utils/: mod.rs  outcome_formatter.rs  outcome_hasher.rs
test-ledger/: genesis.tar.bz2  snapshot-3505-76vkTae1c2XjokB68D9BHkHk9VvUAaxo4ejJMZEraf9q.tar.zst  snapshot-3605-CsMgVziYNHbUxFeGYfUfXnfVPVnziFZAAg8MnjMWtjfL.tar.zst
test-ledger/rocksdb/: 000018.sst  000122.sst  000128.sst  000129.sst  000139.sst  000154.sst  000155.sst  000163.sst  000166.sst  000168.sst  000169.sst  000170.sst  000173.sst  (+33 more)
tests/: admin_ops.test.ts  admin_tests.ts  betting_program_tests.ts  claim_winnings.ts  create_event.test.ts  fees.ts  minorfunction.tests.ts  pbwvm_tests.ts  place_bet.test.ts  resolveEvent.tests.ts  test.ts  voucher_and_fees.test.ts
utils/: outcome_hasher.rs
(+37 files in other folders)
