[package]
name = "betting-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
solana-ed25519-instruction = "0.2.1"
ed25519-dalek = { version = "=1.0.1", default-features = false, features = ["u64_backend"] }
curve25519-dalek = { version = "=3.2.1", default-features = false, features = ["u64_backend"] }
rand_core = { version = "=0.6.4", default-features = false }
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
sha3 = "0.10"
solana-program = "1.18.16"